# com.oddkms.advancedkeybinder

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: AdvancedKeybinder.cpp  AdvancedKeybinder.h  CMakeLists.txt  main.cpp
src/com.oddkms.advancedkeybinder.sdPlugin/: manifest.json
